--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
     "@faker-js/faker": "^8.4.1",
     "eslint": "^9.2.0",
     "globals": "^15.1.0"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "mongoose": "^8.6.3",
+    "pino-http": "^10.3.0"
   }
 }
