--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-# PORT=3000
-# MONGODB_USER=deniszinchenko96
-# MONGODB_PASSWORD=Zu69TgKnkx4fyk7w  # Тут потрібно вказати пароль для користувача MongoDB
-# MONGODB_URL=cluster0.ugqrj.mongodb.net  # Це частина URL вашого кластеру
-# MONGODB_DB=Cluster0  # Вказати назву вашої бази даних
+PORT=3000
+MONGODB_USER=
+MONGODB_PASSWORD=
+MONGODB_URL=
+MONGODB_DB=
 
 
