--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,10 @@ MONGODB_URL=
 MONGODB_DB=
 
 
+SMTP_HOST=smtp-relay.brevo.com
+SMTP_PORT=587
+SMTP_USER=ваш_логін_на_Brevo
+SMTP_PASSWORD=ваш_пароль_на_Brevo
+SMTP_FROM=ваш_емейл_на_Brevo
+JWT_SECRET=секретний_ключ
+APP_DOMAIN=http://localhost:3000
