--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "pino-http": "^10.3.0"
   }
