--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "lint": "eslint src/**/*.js",
     "start": "node src/index",
-    "dev": "nodemon src/index"
+    "dev": "nodemon src/index",
+     "build": "npm run build-docs",
+    "build-docs": "redocly bundle --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +18,7 @@
   "devDependencies": {
     "@eslint/js": "^9.2.0",
     "@faker-js/faker": "^8.4.1",
+    "@redocly/cli": "^1.25.5",
     "eslint": "^9.2.0",
     "globals": "^15.1.0"
   },
