--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,17 @@
-PORT=3000
+PORT=
 MONGODB_USER=
 MONGODB_PASSWORD=
 MONGODB_URL=
 MONGODB_DB=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=
+JWT_SECRET=
+APP_DOMAIN=
+API_SECRET=
+ENABLE_CLOUDINARY=
+GOOGLE_AUTH_CLIENT_ID=
+GOOGLE_AUTH_CLIENT_SECRE=
 
-
-SMTP_HOST=smtp-relay.brevo.com
-SMTP_PORT=587
-SMTP_USER=ваш_логін_на_Brevo
-SMTP_PASSWORD=ваш_пароль_на_Brevo
-SMTP_FROM=ваш_емейл_на_Brevo
-JWT_SECRET=секретний_ключ
-APP_DOMAIN=http://localhost:3000
